# AdventOfCode

./: README.md  advent-of-code.cabal
.stack-work/: stack.sqlite3
2023/: advent-of-code.cabal
2023/src/: Main.hs
2023/src/day1/: SolutionPart1.hs  SolutionPart2.hs
2023/src/day2/: SolutionPart1.hs  SolutionPart2.hs
2023/src/day3/: SolutionPart1.hs  SolutionPart2.hs
2023/src/day4/: SolutionPart1.hs  SolutionPart2.hs
src/: Main.hs
src/y2023/day1/: SolutionPart1.hs  SolutionPart2.hs
src/y2023/day2/: SolutionPart1.hs
